Add tower, trees and world game objects.

--- a/TowerGame/TowerGame/Assembly-CSharp-Editor.csproj
+++ b/TowerGame/TowerGame/Assembly-CSharp-Editor.csproj
@@ -91,6 +91,8 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{D5D96917-9B66-4F6F-5988-6E8797D1074C}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{E8250554-7DC1-3EA6-F1EC-6A6200BFA394}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
